games/uranus-spins/ops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uranus-spins
