games/uranus-spins/ops/k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: uranus-spins
spec:
  ports:
    - port: 5432
      name: postgresql
  selector:
    app: postgres
  clusterIP: None
