games/uranus-spins/ops/k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: uranus-spins
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    app: redis
  clusterIP: None
